--- a/templates/contact.gohtml
+++ b/templates/contact.gohtml
@@ -1,4 +1,6 @@
+{{define "page"}}
 <h1>Contact Page</h1>
 <p> 
 Mail us at:<a href="mailto:prem.bikram.limbu@gmail.com">prem.bikram.limbu@gmail.com</a>.
 </p>
+{{end}}
