--- a/templates/contact.gohtml
+++ b/templates/contact.gohtml
@@ -1,6 +1,6 @@
-{{define "page"}}
+{{template "header" .}}
 <h1>Contact Page</h1>
 <p> 
 Mail us at:<a href="mailto:prem.bikram.limbu@gmail.com">prem.bikram.limbu@gmail.com</a>.
 </p>
-{{end}}
+{{template "footer" .}}
