Added some Tailwind CSS class in contact, home, faq gohtml

--- a/templates/contact.gohtml
+++ b/templates/contact.gohtml
@@ -1,6 +1,8 @@
 {{template "header" .}}
-<h1>Contact Page</h1>
-<p> 
-Mail us at:<a href="mailto:prem.bikram.limbu@gmail.com">prem.bikram.limbu@gmail.com</a>.
-</p>
+<div class="px-6">
+<h1 class="py-4 text-4xl semibold tracking-tight">Contact Page</h1>
+    <p class="text-gray-800"> 
+    Mail us at:<a class="underline" href="mailto:prem.bikram.limbu@gmail.com">prem.bikram.limbu@gmail.com</a>.
+    </p>
+</div>
 {{template "footer" .}}
