--- a/templates/signup.gohtml
+++ b/templates/signup.gohtml
@@ -7,11 +7,11 @@
         <form action="/users" method="post">
             <div class="py-2">
                 <label for="email" class="text-sm font-semibold text-gray-800">Email Address</label>
-                <input name="email" id="email" type="email" placeholder="Email Address" autocomplete="email" class="w-full px-3 py-2 border border-gray-200 placeholder-gray-500 text-gray-800 rounded" required/>
+                <input name="email" id="email" type="email" placeholder="Email Address" autocomplete="email" class="w-full px-3 py-2 border border-gray-200 placeholder-gray-500 text-gray-800 rounded" value="{{.Email}}" {{if not .Email}}autofocus{{end}} required/>
             </div>
             <div class="py-2">
                 <label for="password" class="text-sm font-semibold text-gray-800">Password</label>
-                <input name="password" id="password" type="password" placeholder="Password" class="w-full px-3 py-2 border border-gray-200 placeholder-gray-500 text-gray-800 rounded" required/>
+                <input name="password" id="password" type="password" placeholder="Password" class="w-full px-3 py-2 border border-gray-200 placeholder-gray-500 text-gray-800 rounded" {{if .Email}}autofocus{{end}} required/>
             </div>
             <div class="py-4">
                 <button type="submit" class="w-full py-4 px-2 bg-indigo-600 hover:bg-indigo-700 text-white rounded font-bold text-lg"> Sign Up!</button>
